tests/samples/positive/expressions/block_expression.ax
module block_expression;

fn adjust(flag: bool, base: i32) {
    return if flag {
        let inner = base + 1;
        inner
    } else {
        var total = base;
        total = total + 2;
        total
    };
}

fn inferred_return(flag: bool) {
    let value = {
        if flag {
            return 40;
        }
        2
    };
    return value;
}

fn main() -> i32 {
    let outer = 100;
    let value = {
        let inner = adjust(true, 39);
        let extra = {
            var total = 1;
            total = total + 1;
            total
        };
        inner + extra + outer - 100
    };
    let unified = {
        var total: i32 = 0;
        if value == 42 {
            total += 1;
        }
        while total < 3 {
            total += 1;
        }
        for var i: i32 = 0; i < 4; i += 1 {
            if i == 1 {
                continue;
            }
            if i == 3 {
                break;
            }
            total += i;
        }
        {
            total += 10;
        }
        if total == 15 {
            total + 27
        } else {
            0
        }
    };
    return value + unified + inferred_return(true) - 124;
}
